fix: 라즈베리파에어서 빌드 에러 해결

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,9 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 # 실행 파일은 빌드 디렉토리 안에 bin 폴더에 출력.
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+# 라즈베리파이에서 빌드 에러 해결을 위해 추가 (juno 24.02.22)
+set(CMAKE_CXX_STANDARD 17)
+
 add_subdirectory(lib)
 add_subdirectory(app/client)
 add_subdirectory(app/server)
