feat: cmake 컴파일 옵션 수정

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -137,7 +137,7 @@ target_compile_options(client_lib PRIVATE -Wall -Werror)
 target_compile_options(server_lib PRIVATE -Wall -Werror)
 
 # lib 를 C++ 17 로 컴파일
-target_compile_options(client_lib PRIVATE -Wall -Werror)
+target_compile_features(client_lib PRIVATE cxx_std_17)
 target_compile_features(server_lib PRIVATE cxx_std_17)
 
 
